<resources>
    <string name="app_name">App 3</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="latest_news_and_promotions">Latest News and Promotions</string>
    <string name="kid_s_fashion">Kid\'s Fashion</string>
    <string name="women_s_fashion">Women\'s Fashion</string>
    <string name="men_s_fashion">Men\'s Fashion</string>
    <string name="categories">Categories</string>
    <string name="facebook_application_id">367576603851178</string>
    <string name="fb_login_protocol_scheme">fb367576603851178</string>

</resources>
