<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grad_items">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:text="@string/latest_news_and_promotions"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/josefinsansbold"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="250dp">

            </android.support.v4.view.ViewPager>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefinsansbold"
                android:text="@string/categories"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cvMen"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_height="110dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/grad_bg">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="16dp"
                        android:layout_gravity="center"
                        android:src="@drawable/casualmen"
                        android:layout_marginStart="16dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:fontFamily="@font/josefinsansbold"
                        android:textSize="25sp"

                        android:gravity="center"

                        android:text="@string/men_s_fashion"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cvWomen"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_height="110dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/grad_bg_alt">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="16dp"
                        android:layout_gravity="center"
                        android:src="@drawable/casual3"
                        android:layout_marginStart="16dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:fontFamily="@font/josefinsansbold"
                        android:textSize="25sp"

                        android:gravity="center"

                        android:text="@string/women_s_fashion"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cvKids"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="30dp"
                android:layout_height="110dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/grad_bg_kids">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="16dp"
                        android:layout_gravity="center"
                        android:src="@drawable/kids"
                        android:layout_marginStart="16dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:fontFamily="@font/josefinsansbold"
                        android:textSize="25sp"
                        android:gravity="center"

                        android:text="@string/kid_s_fashion"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

</ScrollView>
